Release Changelog for VanasKoS

alpha-554:
- Add < > surrounding guild name in guild kos list
- Change color of guild kos entries with an owner specified
- Display "reason" as the default guild kos group
- Fix pvplog importer using field for name
- Fix adding entries from last attackers list #94
- Add a default reason when adding from last attackers list
- Fix adding entries from "Add Entry" button
- Fix selecting PvP stats by character
alpha-553:
- Fix more importer errors
- Fix Mouseover data for player pvp stats
alpha-552:
- Fix a couple of importer issues
- Removed unused guilddata
- Fix colors in some flash notifications
alpha-551:
- Fix "Change Entry" button #88
- Fix command line entry adding #93
- Fix debug function to add pvp log entries
alpha-550:
- Replace UIFrameFlash (finally)
alpha-549:
- Fix a few more GUI errors
  - importer, configuration header was missing its value
  - synchronizer was not registering its list correctly with the GUI
- Remove "Lookup in VanasKoS" option from Chat
- Add a VanasKoS header to unit popup menu
- Replace outdated call to RedrawMap with RefreshAllData in eventmap
alpha-548:
- Fix some guild hashing problems
- Add notifications for all default lists, need more options to control this
  - because it could get annoying
alpha-546:
- Fix error when opening ignore list
alpha-545:
- Big overhaul for really broken features with some pretty major changes
  -  Updated EventMap to use new API
  - All player entries are now stored as name-realm
    - Including local realm
- All guild entries are now stored as <guild>
  - It looks like there is some support for cross-realm guilds on connected servers.
  - Encoding as guild-realm was too narrow
- Lists are no longer tracked per realm
  - DataGatherer and PvPDataGatherer are now global
  - KOS, Hate, Nice lists are per faction
- Will not upgrade automatically, requires going through the importer plugin
  - This is because it's pretty likely it will break things